# PACS-Project

./: .gitmodules  README.md  braid.out.cycle  install.sh  makefile  my.data
OLD_MODELS/include/: OpenNNXOR.hpp
OLD_MODELS/src/: TorchXor.cpp
data/: .Rhistory  PaperValidationXor.csv  PaperXor.csv  mydata.csv  xorSIMP.csv
include/: MyBraidApp.hpp  NNBraidApp.hpp
include/OLD_MODELS/: OpenNNXOR.hpp  TorchMNIST.hpp  TorchXOR.hpp
models/FannXor/: CMakeLists.txt  Makefile
models/FannXor/src/: FannXor.cpp
models/OpenNNXor/: CMakeLists.txt  Makefile
models/OpenNNXor/include/: OpenNNXOR.hpp
models/OpenNNXor/src/: OpenNNXOR.cpp
models/TorchMNIST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
models/TorchMNIST/include/: TorchMNIST.hpp
models/TorchMNIST/src/: TorchMNIST.cpp
models/TorchSign/: CMakeLists.txt  Makefile
models/TorchSign/include/: CustomDataSet.h  Model.hpp  TorchSign.hpp
models/TorchSign/src/: TorchSign.cpp
models/TorchXor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
models/TorchXor/include/: CustomDataSet.h  TorchXor.hpp
models/TorchXor/src/: TorchXor.cpp
models/TorchXorPaper/: CMakeLists.txt  Makefile
models/TorchXorPaper/include/: CustomDataSet.h  TorchXor.hpp
models/TorchXorPaper/src/: TorchXor.cpp
models/include/: FannXor.hpp  TorchMNIST.hpp  TorchXor.hpp
models/src/: TorchMNIST.cpp
src/: MyBraidApp.cpp  NNBraidAPP.cpp  NNBraidApp.cpp  main.cpp
src/OLD_MODELS/: OpenNNXOR.cpp  TorchMNIST.cpp
